samples/_failures_safe/1761349341_6dd0f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_292ee588.c: In function ‘main’:
./samples/SAFE/__tmp_292ee588.c:137:17: error: expected expression at end of input
  137 |                 if (mat1.cols !=
      |                 ^~
./samples/SAFE/__tmp_292ee588.c:137:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_292ee588.c:137:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_292ee588.c:137:17: error: expected declaration or statement at end of input
